--- a/ui/src/styles/style.css
+++ b/ui/src/styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
@@ -29,12 +31,27 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif !important;
+  font-family: "Inter", sans-serif;
   box-sizing: border-box;
 }
 
+.material-icons {
+  font-family: "Material Icons" !important;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
-  font-family: "Inter", sans-serif !important;
+  font-family: "Inter", sans-serif;
   background-color: var(--background-color);
   height: 100vh;
   width: 100vw;
@@ -1470,6 +1487,48 @@ body {
   font-size: 13px;
   color: var(--text-color);
   font-weight: 500;
+}
+
+.setting-label-group {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 20px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "liga";
+}
+
+.setting-label-group i.material-icons {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.settings-group {
+  margin-bottom: 24px;
+}
+
+.settings-group-title {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--color-white);
+  margin-bottom: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  opacity: 0.9;
 }
 
 /* Inputs & Selects */
