--- a/ui/src/styles/checkbox.css
+++ b/ui/src/styles/checkbox.css
@@ -39,12 +39,10 @@
 }
 
 input:checked + .slider {
-  background-color: rgba(40, 167, 69, 0.2);
-  border-color: rgba(40, 167, 69, 0.4);
+  background-color: #999;
 }
 
 input:checked + .slider:before {
   transform: translateX(20px);
-  background-color: var(--color-bright-green);
-  box-shadow: 0 0 8px rgba(40, 167, 69, 0.5);
+  background-color: #fff;
 }
